--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container text-center">
     <div class="row" id="main-row">
       <div class="col" id="main-col">
-        <div class="row justify-content-center align-items-end gx-1" id="brand">
+        <div class="row justify-content-center align-items-end gx-1" id="brand"> <!--Brand-->
           <div class="col-auto">
             <img src="images\temp.png" alt="Brand Logo" id="brand-logo">
           </div>
@@ -27,10 +27,14 @@
         <div class="row"> <!--Mottos-->
           <div class="col">
             <div class="row">
-              <div class="col">Motto 1</div>
+              <div class="col">
+                <h3>Motto 1</h3>
+              </div>
             </div>
             <div class="row">
-              <div class="col">Motto 2</div>
+              <div class="col">
+                <h2>Motto 2</h2>
+              </div>
             </div>
           </div>
         </div>
