--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <!--Brand-->
         <div class="row justify-content-center align-items-end gx-1" id="brand">
           <div class="col-auto">
-            <img src="images\PhoThaiSon.png" alt="Brand Logo" id="brand-logo">
+            <img src="images\Logo.png" alt="Brand Logo" id="brand-logo">
           </div>
           <div class="col-auto text-center">
-            <h1>P<span>HO</span> T<span>HÁI</span> S<span>ON</span></h1>
+            <h1>C<span>ODE</span> B<span>REW</span> J<span>AVA</span></h1>
           </div>
         </div>
 
@@ -34,12 +34,12 @@
           <div class="col">
             <div class="row">
               <div class="col text-center">
-                <h2>Authentic Restaurant-Style Vietnamese Cuisine</h2>
+                <h2>Caffeinate Your Code, Brew Your Breakthroughs</h2>
               </div>
             </div>
             <div class="row">
               <div class="col text-center">
-                <h3>Try Our Vibrant Flavors!</h3>
+                 <h3>Laptop In Tow, Coffee Awaits!</h3>
               </div>
             </div>
           </div>
@@ -52,7 +52,7 @@
             <div class="row justify-content-center align-items-end item-container">
               <!--Item Image-->
               <div class="col-auto p-0">
-                <img src="images\PorkDumplings.png" alt="Item Image" class="item-image">
+                <img src="images\IcedCaramelMacchiato.png" alt="Item Image" class="item-image">
               </div>
               <!-- Item Info -->
               <div class="col item-info">
@@ -60,7 +60,7 @@
                 <div class="row">
                   <div class="col">
                     <p class="item-name">
-                      Pork Dumplings
+                      Iced Caramel Macchiato
                     </p>
                   </div>
                 </div>
@@ -68,7 +68,7 @@
                 <div class="row">
                   <div class="col">
                     <p class="item-description">
-                      Pork, cabbage, green onions, wrapped in wheat dough.
+                    Classic brew to power your day ... and night.
                     </p>
                   </div>
                 </div>
@@ -77,7 +77,7 @@
                   <!-- Item Price -->
                   <div class="col">
                     <p class="item-price">
-                      $7.00
+                      $4.99
                     </p>
                   </div>
                   <!-- Item Add -->
@@ -95,7 +95,7 @@
             <div class="row justify-content-center align-items-end item-container">
               <!--Item Image-->
               <div class="col-auto p-0">
-                <img src="images\BeefPho.png" alt="Item Image" class="item-image">
+                <img src="images\ChamomileCitrusTea.png" alt="Item Image" class="item-image">
               </div>
               <!-- Item Info -->
               <div class="col item-info">
@@ -103,7 +103,7 @@
                 <div class="row">
                   <div class="col">
                     <p class="item-name">
-                      Beef Pho
+                      Chamomile Citrus Tea
                     </p>
                   </div>
                 </div>
@@ -111,7 +111,7 @@
                 <div class="row">
                   <div class="col">
                     <p class="item-description">
-                      Beef broth pho with your choice of up to three cuts of beef.
+                      Soothing chamomile infused with lively citrus notes.
                     </p>
                   </div>
                 </div>
@@ -120,7 +120,7 @@
                   <!-- Item Price -->
                   <div class="col">
                     <p class="item-price">
-                      $12.00
+                      $3.99
                     </p>
                   </div>
                   <!-- Item Add -->
@@ -138,7 +138,7 @@
             <div class="row justify-content-center align-items-end item-container">
               <!--Item Image-->
               <div class="col-auto p-0">
-                <img src="images\BeefStew.png" alt="Item Image" class="item-image">
+                <img src="images\ClassicFrenchMacarons.png" alt="Item Image" class="item-image">
               </div>
               <!-- Item Info -->
               <div class="col item-info">
@@ -146,7 +146,7 @@
                 <div class="row">
                   <div class="col">
                     <p class="item-name">
-                      Beef Stew
+                      Classic French Macarons
                     </p>
                   </div>
                 </div>
@@ -154,7 +154,7 @@
                 <div class="row">
                   <div class="col">
                     <p class="item-description">
-                      Beef broth noodle soup with spicy braised brisket.
+                      Twelve diverse flavors for a vibe-filled treat.
                     </p>
                   </div>
                 </div>
@@ -163,7 +163,7 @@
                   <!-- Item Price -->
                   <div class="col">
                     <p class="item-price">
-                      $13.00
+                      $11.99
                     </p>
                   </div>
                   <!-- Item Add -->
@@ -181,7 +181,7 @@
             <div class="row justify-content-center align-items-end item-container">
               <!--Item Image-->
               <div class="col-auto p-0">
-                <img src="images\LemongrassTofu.png" alt="Item Image" class="item-image">
+                <img src="images\MediterraneanVegWrap.png" alt="Item Image" class="item-image">
               </div>
               <!-- Item Info -->
               <div class="col item-info">
@@ -189,7 +189,7 @@
                 <div class="row">
                   <div class="col">
                     <p class="item-name">
-                      Lemongrass Tofu
+                      Mediterranean Veg Wrap
                     </p>
                   </div>
                 </div>
@@ -197,7 +197,7 @@
                 <div class="row">
                   <div class="col">
                     <p class="item-description">
-                      Soft tofu stir fried with lemongrass, red chili pepper, onion, and garlic.
+                      Loaded with fresh goodness, wrapped in a chill bite.
                     </p>
                   </div>
                 </div>
@@ -206,7 +206,7 @@
                   <!-- Item Price -->
                   <div class="col">
                     <p class="item-price">
-                      $11.50
+                      $9.49
                     </p>
                   </div>
                   <!-- Item Add -->
