Created Full Layout V3

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div class="row">
                   <div class="col">
                     <p class="item-name">
-                      Mediterranean Veg Wrap
+                      Mediterr. Veggie Wrap
                     </p>
                   </div>
                 </div>
