--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--Brand-->
         <div class="row justify-content-center align-items-end gx-1" id="brand">
           <div class="col-auto">
-            <img src="images\Logo.png" alt="Brand Logo" id="brand-logo">
+            <img src="images\Logo.png" alt="The brand logo of Code Brew Java" id="brand-logo">
           </div>
           <div class="col-auto text-center">
             <h1>C<span>ODE</span> B<span>REW</span> J<span>AVA</span></h1>
@@ -52,7 +52,7 @@
             <div class="row justify-content-center align-items-end item-container">
               <!--Item Image-->
               <div class="col-auto p-0">
-                <img src="images\IcedCaramelMacchiato.png" alt="Item Image" class="item-image">
+                <img src="images\IcedCaramelMacchiato.png" alt="An iced macchiato with a caramel drizzle served in a mason jar." class="item-image">
               </div>
               <!-- Item Info -->
               <div class="col item-info">
@@ -95,7 +95,7 @@
             <div class="row justify-content-center align-items-end item-container">
               <!--Item Image-->
               <div class="col-auto p-0">
-                <img src="images\ChamomileCitrusTea.png" alt="Item Image" class="item-image">
+                <img src="images\ChamomileCitrusTea.png" alt="A cup of chamomile tea with a splash of citrus." class="item-image">
               </div>
               <!-- Item Info -->
               <div class="col item-info">
@@ -138,7 +138,7 @@
             <div class="row justify-content-center align-items-end item-container">
               <!--Item Image-->
               <div class="col-auto p-0">
-                <img src="images\ClassicFrenchMacarons.png" alt="Item Image" class="item-image">
+                <img src="images\ClassicFrenchMacarons.png" alt="A neatly packed box of twelve different macarons." class="item-image">
               </div>
               <!-- Item Info -->
               <div class="col item-info">
@@ -181,7 +181,7 @@
             <div class="row justify-content-center align-items-end item-container">
               <!--Item Image-->
               <div class="col-auto p-0">
-                <img src="images\MediterraneanVegWrap.png" alt="Item Image" class="item-image">
+                <img src="images\MediterraneanVegWrap.png" alt="A veggie wrap with mixed greens, tomatoes, and chesse." class="item-image">
               </div>
               <!-- Item Info -->
               <div class="col item-info">
